noinst_LTLIBRARIES = libs2etools.la
libs2etools_la_SOURCES = \
                        lib/ExecutionTracer/LogParser.cpp \
                        lib/ExecutionTracer/LogParser.h \
                        lib/ExecutionTracer/PathBuilder.cpp \
                        lib/ExecutionTracer/Path.h \
                        lib/Utils/signals.cpp \
                        lib/Utils/Signals/fsigc++.h \
                        lib/Utils/Signals/functors.h \
                        lib/Utils/Signals/Signals.h \
                        lib/Utils/Signals/sig-template.h

libs2etools_la_CXXFLAGS = -I$(top_srcdir)